# remu

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  LICENSE  README.md  add-addi  add-addi.s  build_and_run.sh  build_and_test.sh  bus.cpp  bus.h  compile_and_exec.sh  cup.cpp  cup.h  dram.cpp  dram.h  exception.cpp  exception.h  g_test.cc  instructions.cpp  instructions.h  main.cpp  param.h  run.sh
include/: cpu.h  logger.h
src/: CMakeLists.txt  bus.cpp  bus.h  clint.cpp  clint.h  cpu.cpp  csr.cpp  csr.h  cup.cpp  cup.h  dram.cpp  dram.h  exception.cpp  exception.h  instructions.cpp  instructions.h  interrupt.cpp  interrupt.h  log.h  main.cpp  param.h  plic.cpp  plic.h  uart.cpp  uart.h
tests/: CMakeLists.txt  dram_test.cpp  g_test.cc  helpers.cpp  helpers.h  instructions_test.cpp  rv_test_helper.cpp  rv_test_helper.h  test_cpu.cpp  test_framework.h  test_util.cpp  test_util.h
tests/unitest/: bus_test.cpp  client_test.cpp  cpu_test.cpp  csr_test.cpp  dram_test.cpp  exception.cpp  instructions_test.cpp  plic_test.cpp  uart_test.cpp
